--- a/xmanctf/index.html
+++ b/xmanctf/index.html
@@ -1,18 +1,26 @@
-<!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>WASM - Introduction</title>
-    </head>
-   <body><link rel="stylesheet" property="stylesheet" id="s" type="text/css" href="WASM%20-%20Introduction_files/s.css" media="all"><iframe id="iframe" src="WASM%20-%20Introduction_files/a.html"></iframe>
-	<h1>WASM - Introduction</h1>
-	<br>
-	
-        <h3>Enter the password to get the flag:</h3>
-        <input type="password" id="password">
-        <button id="validate">Check password</button>
-        <p id="flag"></p>
-        
-        <script type="text/javascript" src="WASM%20-%20Introduction_files/index.js"></script>
-    
-
-</body></html>
+!doctype html> 
+<html>
+   <head>
+      <meta charset="utf-8"> 
+      <title>WebAssembly Square function</title> 
+      <style> 
+         div { 
+            font-size : 30px; text-align : center; color:orange; 
+         } 
+      </style> 
+   </head> 
+   <body> 
+      <div id="textcontent"></div> 
+      <script> 
+         let square; 
+         fetch("findsquare.wasm").then(bytes => bytes.arrayBuffer()) 
+            .then(mod => WebAssembly.compile(mod)) 
+            .then(module => {return new WebAssembly.Instance(module) }) 
+            .then(instance => {  
+            square = instance.exports.square(13);
+            console.log("The square of 13 = " +square);           
+            document.getElementById("textcontent").innerHTML = "The square of 13 = " +square; 
+         }); 
+      </script> 
+   </body> 
+</html>
